2006-04-21  Andy Wingo  <wingo@pobox.com>

	* configure.ac (GST_MAJORMINOR): Drop the required gstreamer
	version back down to the latest release, I don't think thomas'
	commit on 1 april was meant to change it.

	* ext/ffmpeg/gstffmpegdec.c (gst_ffmpegdec_register): Up the rank
	of the dv video decoder.

2006-04-19  J^ <j@bootlab.org>

	reviewed by: Edward Hervey  <edward@fluendo.com>

	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_codecid_to_caps),
	(gst_ffmpeg_formatid_to_caps), (gst_ffmpeg_formatid_get_codecids),
	(gst_ffmpeg_get_codecid_longname):
	Added proper GstCaps <==> CodecId for Apple QDRaw.
	Fixed up proper wrapping for GstCaps <==> FormatId.

2006-04-18  Wim Taymans  <wim@fluendo.com>

	* ext/ffmpeg/gstffmpegdemux.c: (gst_ffmpegdemux_perform_seek),
	(gst_ffmpegdemux_loop):
	Don't try to convert -1 values when seeking.
	Adjust timestamps with start_time of the stream.

2006-04-13  Wim Taymans  <wim@fluendo.com>

	* ext/ffmpeg/gstffmpegdemux.c: (gst_ffmpegdemux_base_init),
	(gst_ffmpegdemux_class_init), (gst_ffmpegdemux_init),
	(gst_ffmpegdemux_close), (gst_ffmpegdemux_push_event),
	(gst_ffmpegdemux_set_flags), (gst_ffmpegdemux_is_eos),
	(gst_ffmpegdemux_do_seek), (gst_ffmpegdemux_perform_seek),
	(gst_ffmpegdemux_src_event), (gst_ffmpegdemux_send_event),
	(gst_ffmpegdemux_src_query), (gst_ffmpegdemux_src_convert),
	(gst_ffmpegdemux_get_stream), (my_safe_copy),
	(gst_ffmpegdemux_read_tags), (gst_ffmpegdemux_open),
	(gst_ffmpegdemux_loop), (gst_ffmpegdemux_sink_activate),
	(gst_ffmpegdemux_sink_activate_pull),
	(gst_ffmpegdemux_change_state), (gst_ffmpegdemux_register):
	Rework the demuxer, implement all seeking stuff including
	seek in ready.

	* ext/ffmpeg/gstffmpegprotocol.c: (gst_ffmpegdata_peek),
	(gst_ffmpegdata_close):
	Handle some more cases.

2006-04-11  Wim Taymans  <wim@fluendo.com>

	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_sink_event):
	Actually convert to time instead of pretending.. Also