@@ -1,3 +1,8 @@
+2006-04-24  Edgard Lima <edgard.lima@indt.org.br>
+
+	* ext/ffmpeg/gstffmpegenc.c: (gst_ffmpegenc_chain_video):
+	just make it compile with --disable-gst-debug.
+
 2006-04-21  Andy Wingo  <wingo@pobox.com>
 
 	* configure.ac (GST_MAJORMINOR): Drop the required gstreamer
